force-app/main/default/objects/COBTaxResidency__c/COBTaxResidency__c.object-meta.xml
<CustomObject>
    <description>The details of a single tax residency in a country/region</description>
    <label>COB Tax Residency</label>
    <nameField>
        <displayFormat>COBTR-{00000000}</displayFormat>
        <label>COB Tax Residency Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>COB Tax Residencies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>