force-app/main/default/objects/COBTaxResidency__c/fields/CustomerOnboardingApplication__c.field-meta.xml
<CustomField>
    <fullName>CustomerOnboardingApplication__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Temporal</complianceGroup>
    <description>Master-Detail relationship field that looks up to the Customer Onboarding Application object</description>
    <label>Customer Onboarding Application</label>
    <referenceTo>CustomerOnboardingApplication__c</referenceTo>
    <relationshipLabel>COB Tax Residencies</relationshipLabel>
    <relationshipName>COB_Tax_Residencies</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>