force-app/main/default/objects/COBTaxResidency__c/fields/OmissionReasonCode__c.field-meta.xml
<CustomField>
    <fullName>OmissionReasonCode__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_Temporal</complianceGroup>
    <description>The code identifying a valid omission reason (defined by ANZ data governance)</description>
    <label>Omission Reason Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>