force-app/main/default/objects/COBTaxResidency__c/fields/OmissionReasonDescription__c.field-meta.xml
<CustomField>
    <fullName>OmissionReasonDescription__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_Temporal</complianceGroup>
    <description>The descriptive text accompanying the reason code (defined by ANZ data governance)</description>
    <label>Omission Reason Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>