force-app/main/default/objects/COBTaxResidency__c/fields/OnboardingAttemptCount__c.field-meta.xml
<CustomField>
    <fullName>OnboardingAttemptCount__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Temporal</complianceGroup>
    <description>Counter for Onboarding attempts.</description>
    <label>Onboarding Attempt Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>