force-app/main/default/objects/COBTaxResidency__c/fields/PersonaTaxResidency__c.field-meta.xml
<CustomField>
    <fullName>PersonaTaxResidency__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Temporal</complianceGroup>
    <description>Composite key based on persona ID and tax region, for uniquely identifying a tax residency record</description>
    <externalId>true</externalId>
    <label>Persona Tax Residency</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>