force-app/main/default/objects/COBTaxResidency__c/fields/RegionName__c.field-meta.xml
<CustomField>
    <fullName>RegionName__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_Temporal</complianceGroup>
    <description>The name of the country/region (defined by ANZ data governance)</description>
    <label>Region Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>