force-app/main/default/objects/COBTaxResidency__c/fields/Removed__c.field-meta.xml
<CustomField>
    <fullName>Removed__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Temporal</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Flag indicating that this tax residency was removed by the user, most likely to allow them to complete onboarding</description>
    <label>Removed</label>
    <type>Checkbox</type>
</CustomField>