force-app/main/default/objects/COBTaxResidency__c/fields/TaxIdentificationNumber__c.field-meta.xml
<CustomField>
    <fullName>TaxIdentificationNumber__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Sensitive_Personal_Information;Source_Temporal</complianceGroup>
    <description>Tax identification number (TIN), i.e. an Australian TFN or international equivalent (TOKENISED)</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Tax Identification Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>