force-app/main/default/objects/COBTaxResidency__c/fields/TaxIdentificationNumberTransform__c.field-meta.xml
<CustomField>
    <fullName>TaxIdentificationNumberTransform__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Temporal</complianceGroup>
    <description>Tokenisation transform type</description>
    <label>Tax Identification Number Transform</label>
    <length>255</length>
    <type>Text</type>
</CustomField>